import util.*;

public class Main {
    public static void main(String[] args) {
        Streaming.streamSetup();
        Streaming.mainMenu();
    }
}